Fix a problem with annotation standalone and cutoff

--- a/icc/static/styles/_annotation.scss
+++ b/icc/static/styles/_annotation.scss
@@ -87,10 +87,6 @@
         .delta p { background-color: $red; }
         .cutoff {
             p:last-of-type::after { content: "..." }
-            a:last-of-type {
-                display: block;
-                margin: 1em;
-            }
         }
     }
     .tags {
